fixed clipping bug, put blocks in a array, planned code for future updates

--- a/projet JS/style.css
+++ b/projet JS/style.css
@@ -1,52 +1,49 @@
-body{
-  padding:0;
-  margin:0;
+body
+{
+    padding:0;
+    margin:0;
+    overflow: hidden;
 }
 
-.block-line{
-  height:600px;
-  width:100%;
-  margin:0;
-  padding:0;
-  display: flex;
+div
+{
+    margin: 0;
+    padding: 0;
 }
 
-.gauche{
-  height:100%;
-  width:7%;
-  margin:0;
-  padding:0;
-  background-color: blue;
+.block-line
+{
+    display: flex;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    height:600px;
+    width:100%;
+}
+
+.gauche, .droite
+{
+    flex-grow: 1;
+    box-sizing: border-box;
+    height:100%;
+    background-color: blue;
 }
 
 .centre{
-height:100%;
-width:86%;
-margin:0;
-padding:0;
-background-color: grey;
-position: relative;
-}
-
-.droite{
-  height:100%;
-  width:7%;
-  margin:0;
-  padding:0;
-  background-color: blue;
+    box-sizing: border-box;
+    height:100%;
+    width:90%;
+    background-color: grey;
 }
 .ligne{
-  display:flex;
+    display:flex;
+    box-sizing: border-box;
 }
 .bloc{
-  box-sizing: border-box;
-  margin:0;
-  padding:0;
-  background-color: red;
-  flex:1;
+    flex-grow: 1;
+    box-sizing: border-box;
+    background-color: red;
 }
-
-
 .passage{
-  background-color: green;
+    background-color: green;
 }
